fixed U1 navbar alignment

--- a/src/components/MainPage/MainNavbar/MainNavbar_desktop.scss
+++ b/src/components/MainPage/MainNavbar/MainNavbar_desktop.scss
@@ -1,6 +1,5 @@
 @media (min-width: 768px) {
     #main-navbar .upperLogoD { justify-content: flex-start; }
-    #main-navbar #upperLogo { height: 100px; }
 
     #main-navbar.navbar {
         position: relative;
