--- a/src/components/common/Navbar/Navbar_desktop.scss
+++ b/src/components/common/Navbar/Navbar_desktop.scss
@@ -33,6 +33,8 @@
     .upperLogo {
         height: 100px;
     }
+    
+    #upperLogo { height: 100px; }
 
     #upperName {
         height: 35px;
